--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,12 @@ jobs:
     - name: Check current directory
       run: pwd
 
+    - name: List files
+      run: ls -l
+
+
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v1
 
     - name: Authenticate to GCP
       uses: google-github-actions/auth@v1
@@ -42,7 +46,7 @@ jobs:
         docker buildx build . \
           --platform linux/amd64 \
           -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
-          --push
+          --push --progress=plain
 
     - name: Deploy to GKE using Helm
       run: |
