--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,6 @@ jobs:
     - name: List files
       run: ls -l
 
-
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -44,7 +43,7 @@ jobs:
     - name: Build Docker Image for linux/amd64
       run: |
         docker buildx build . \
-          --platform linux/amd64 \
+          --platform=linux/amd64 \
           -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
           --push --progress=plain
 
