--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,15 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    # - name: Debug secrets and variables
+    #   run: |
+    #     echo ${{ secrets.ARTIFACT_REGISTRY_REGION }}
+    #     echo ${{ secrets.GCP_PROJECT_ID }}
+    #     echo ${{ secrets.ARTIFACT_REGISTRY_REPO }}
+
+    # - name: Login to Google Container Registry
+    #   run: echo "${{ secrets.GCP_SA_KEY }}" | docker login -u _json_key --password-stdin https://${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev
+
     - name: Authenticate to GCP
       uses: google-github-actions/auth@v1
       with:
@@ -39,7 +48,7 @@ jobs:
         docker buildx build \
           --platform linux/amd64 \
           -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
-          --push --progress=plain .
+          --push --progress plain .
 
     - name: Deploy to GKE using Helm
       run: |
