--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,12 +43,17 @@ jobs:
       run: |
         gcloud auth configure-docker ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev
 
+    - name: Print working directory and list files
+      run: |
+        pwd
+        ls -l
+
     - name: Build Docker Image for linux/amd64
       run: |
         docker buildx build \
-          --platform linux/amd64 \
-          -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
-          --push --progress plain .
+        --platform linux/amd64 \
+        -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
+        --push --progress=plain .
 
     - name: Deploy to GKE using Helm
       run: |
