--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,11 +50,7 @@ jobs:
 
     - name: Build Docker Image for linux/amd64
       run: |
-        docker buildx build \
-        --platform linux/amd64 \
-        -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
-        --push --progress=plain \
-        .
+        docker buildx build --platform linux/amd64 -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA --push --progress=plain .
 
     - name: Deploy to GKE using Helm
       run: |
