--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,9 +51,11 @@ jobs:
     # - name: Test Docker Build
     #   run: docker build -t test-build .
 
-    - name: Test Docker Buildx
-      run: docker buildx build --platform linux/amd64 -t test-build .
+    - name: Build Docker Image using Buildx
+      run: docker buildx build --platform linux/amd64 -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA --output=type=docker
 
+    - name: Push Docker Image
+      run: docker push ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA
 
     - name: Build Docker Image for linux/amd64
       run: |
