--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,23 +43,19 @@ jobs:
       run: |
         gcloud auth configure-docker ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev
 
-    # - name: Print working directory and list files
-    #   run: |
-    #     pwd
-    #     ls -l
-    # 
-    # - name: Test Docker Build
-    #   run: docker build -t test-build .
-
     - name: Build Docker Image using Buildx
-      run: docker buildx build --platform linux/amd64 -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA --output=type=docker .
+      run: docker buildx build \
+      --platform linux/amd64 \
+      -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
+      --push --progress plain \
+      .
 
-    - name: Push Docker Image
-      run: docker push ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA
-
-    - name: Build Docker Image for linux/amd64
-      run: |
-        docker buildx build --platform linux/amd64 -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA --push --progress=plain .
+    # - name: Push Docker Image
+    #   run: docker push ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA
+    
+    # - name: Build Docker Image for linux/amd64
+    #   run: |
+    #     docker buildx build --platform linux/amd64 -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA --push --progress=plain .
 
     - name: Deploy to GKE using Helm
       run: |
