--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,22 +44,23 @@ jobs:
         gcloud auth configure-docker ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev
 
     - name: Build Docker Image using Buildx
-      run: docker buildx build \
-      --platform linux/amd64 \
-      -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
-      --push --progress plain \
-      .
+      run: |
+        docker buildx build \
+        --platform linux/amd64 \
+        -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
+        --push --progress plain \
+        .
 
     # - name: Push Docker Image
     #   run: docker push ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA
-    
+
     # - name: Build Docker Image for linux/amd64
     #   run: |
     #     docker buildx build --platform linux/amd64 -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA --push --progress=plain .
 
     - name: Deploy to GKE using Helm
       run: |
-        helm upgrade --install gke-python-release ./helm-chart \
+        helm upgrade --install gke-python-release ./my-helm-chart \
           --set image.repository=${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app \
           --set image.tag=$GITHUB_SHA \
           --set service.type=LoadBalancer
