--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,6 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    # - name: Debug secrets and variables
-    #   run: |
-    #     echo ${{ secrets.ARTIFACT_REGISTRY_REGION }}
-    #     echo ${{ secrets.GCP_PROJECT_ID }}
-    #     echo ${{ secrets.ARTIFACT_REGISTRY_REPO }}
-
     - name: Authenticate to GCP
       uses: google-github-actions/auth@v1
       with:
@@ -45,22 +39,15 @@ jobs:
         docker buildx build \
         --platform linux/amd64 \
         -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
-        --push --progress plain \
+        --push \
+      # --progress plain \
         .
-
-    # - name: Push Docker Image
-    #   run: docker push ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA
-
-    # - name: Build Docker Image for linux/amd64
-    #   run: |
-    #     docker buildx build --platform linux/amd64 -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA --push --progress=plain .
 
     - name: Deploy to GKE using Helm
       run: |
         helm upgrade --install gke-python-release ./my-helm-chart \
           --set image.repository=${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app \
-          --set image.tag=$GITHUB_SHA \
-          --set service.type=LoadBalancer
+          --set image.tag=$GITHUB_SHA
 
     - name: Get Service External IP
       run: |
