chore: cleaned up workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,15 +39,15 @@ jobs:
         docker buildx build \
         --platform linux/amd64 \
         -t ${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app:$GITHUB_SHA \
-        --push \
-      # --progress plain \
+        --push --progress plain \
         .
 
     - name: Deploy to GKE using Helm
       run: |
         helm upgrade --install gke-python-release ./my-helm-chart \
           --set image.repository=${{ secrets.ARTIFACT_REGISTRY_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REGISTRY_REPO }}/gke-python-app \
-          --set image.tag=$GITHUB_SHA
+          --set image.tag=$GITHUB_SHA \
+          --set service.type=LoadBalancer
 
     - name: Get Service External IP
       run: |
