--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,16 @@ jobs:
         --push --progress plain \
         .
 
+    - name: Set up GKE Cluster Credentials
+      run: |
+        gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
+        --zone ${{ secrets.ARTIFACT_REGISTRY_REGION }} \
+        --project ${{ secrets.GCP_PROJECT_ID }}
+
+    - name: Verify Kubernetes Cluster Connectivity
+      run: |
+        kubectl get nodes
+
     - name: Deploy to GKE using Helm
       run: |
         helm upgrade --install gke-python-release ./my-helm-chart \
