--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+    - name: Debug GCP Service Account
+      run: |
+        gcloud auth list
+
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
