--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,13 @@ jobs:
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+    - name: Set GOOGLE_APPLICATION_CREDENTIALS manually
+      run: |
+        echo ${{ secrets.GCP_SA_KEY }} > /tmp/keyfile.json
+        export GOOGLE_APPLICATION_CREDENTIALS="/tmp/keyfile.json"
+        gcloud auth list
+
+
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
@@ -43,6 +50,7 @@ jobs:
 
     - name: Set up GKE Cluster Credentials
       run: |
+        export CLOUDSDK_CORE_LOG_HTTP=true
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
         --zone ${{ secrets.ARTIFACT_REGISTRY_REGION }} \
         --project ${{ secrets.GCP_PROJECT_ID }}
