--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Set GOOGLE_APPLICATION_CREDENTIALS manually
       run: |
-        echo ${{ secrets.GCP_SA_KEY }} > /tmp/keyfile.json
+        printf "%s" "${{ secrets.GCP_SA_KEY }}" > /tmp/keyfile.json
         export GOOGLE_APPLICATION_CREDENTIALS="/tmp/keyfile.json"
         gcloud auth list
 
